# iris

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/iris-core/: Cargo.toml
crates/iris-core/benches/: parser_throughput.rs  scrollback_throughput.rs  selection_throughput.rs
crates/iris-core/src/: cell.rs  cursor.rs  damage.rs  error.rs  grid.rs  input.rs  lib.rs  modes.rs  parser.rs  terminal.rs  utils.rs
crates/iris-core/src/cell/: tests.rs
crates/iris-core/src/cursor/: tests.rs
crates/iris-core/src/damage/: tests.rs
crates/iris-core/src/grid/: indexing.rs  mod.rs  resize.rs  scroll.rs  tests.rs  write.rs
crates/iris-core/src/modes/: tests.rs
crates/iris-core/src/parser/: actions.rs  control.rs  csi.rs  dcs.rs  mod.rs  osc.rs  state.rs
crates/iris-core/src/scrollback/: buffer.rs  line.rs  mod.rs  search.rs
crates/iris-core/src/selection/: engine.rs  mod.rs  types.rs
crates/iris-core/src/terminal/: editing.rs  mod.rs  movement.rs  screen.rs  tests.rs  (+1 more)
crates/iris-core/tests/: osc_flow.rs  real_streams.rs  terminal_flow.rs  vttest_streams.rs
crates/iris-platform/: Cargo.toml
crates/iris-platform/src/: clipboard.rs  dpi.rs  error.rs  fonts.rs  ime.rs  keyboard.rs  lib.rs  pty.rs  selection_input.rs
crates/iris-platform/tests/: pty.rs
crates/iris-render-wgpu/: Cargo.toml
crates/iris-render-wgpu/benches/: renderer_throughput.rs
crates/iris-render-wgpu/src/: atlas.rs  cell.rs  cursor.rs  error.rs  font.rs  glyph.rs  lib.rs  pipeline.rs  renderer.rs  surface.rs  terminal_renderer.rs  text_renderer.rs  texture.rs  theme.rs  traits.rs
(+105 files in other folders)
