[package]
name = "iris-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.6"
smallvec = "1.13"
thiserror = "1.0"
unicode-width = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"

[[bench]]
name = "parser_throughput"
harness = false

[[bench]]
name = "selection_throughput"
harness = false
