[package]
name = "iris-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
iris-core = { path = "../iris-core" }
arboard = { version = "3.6.1", default-features = false }
portable-pty = "0.9.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
