[package]
name = "iris-render-wgpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
fontdb = "0.16"
fontdue = "0.8"
iris-core = { path = "../iris-core" }
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
wgpu = "0.19"

[dev-dependencies]
pollster = "0.3"
